--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             html, body {
                 margin: 0;
                 padding: 0;
+                background-color: #000;
             }
 
             * {
@@ -35,11 +36,13 @@
         <canvas id="gameCanvas" width="720" height="480"></canvas>
 
         <!--页尾-->
-        <!--<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>-->
+        <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js" charset="UTF-8"><\/script>')</script>
         <script>window.cc || document.write('<script src="js/vendor/cocos2d-js-v3.1-lite.js" charset="UTF-8"><\/script>')</script>
         <script src="js/plugins.js" charset="UTF-8"></script>
-        <script src="js/main.js" charset="UTF-8"></script>
+        <script src="js/components.js" charset="UTF-8"></script>
         <script src="js/demo.js" charset="UTF-8"></script>
+        <script src="js/main.js" charset="UTF-8"></script>
+        <script src="js/components-test.js" charset="UTF-8"></script>
     </body>
 </html>
