--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js" charset="UTF-8"><\/script>')</script>
         <script>window.cc || document.write('<script src="js/vendor/cocos2d-js-v3.1-lite.js" charset="UTF-8"><\/script>')</script>
         <script src="js/plugins.js" charset="UTF-8"></script>
+        <script src="js/plexus.js" charset="UTF-8"></script>
         <script src="js/components.js" charset="UTF-8"></script>
         <script src="js/demo.js" charset="UTF-8"></script>
         <script src="js/main.js" charset="UTF-8"></script>
