--- a/index.html
+++ b/index.html
@@ -17,38 +17,50 @@
         <!-- <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css"> -->
         <link rel="stylesheet" href="css/bootstrap3/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap3/bootstrap-theme.min.css">
+        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.slate.min.css"> -->
+        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.paper.min.css"> -->
+        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.yeti.min.css"> -->
+        <!-- <link rel="stylesheet" href="css/bootstrap3/bootstrap.superhero.min.css"> -->
+        <link rel="stylesheet" href="css/bootstrap3/bootstrap-select.min.css">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <style text="text/css">
-            html, body {
-                background-color: #222;
+            html {
+              height: 100%;
             }
 
             body {
-              margin-top: 80px;
+              position: relative;
+              margin: 0;
+              padding: 0;
+              font-size: 14px;
+              overflow: hidden;
             }
 
             body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 {
               font-family: Microsoft YaHei, Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
               /* text-shadow: 0 1px 0 #fff; */
             }
+
             .form-control {
               font-family: Microsoft YaHei, Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
               /* text-shadow: 0 1px 0 #fff; */
             }
 
-            hr {
-              border-color: #eee;
+            .bootstrap-select.btn-group:not(.input-group-btn),.bootstrap-select.btn-group[class*="col-"] {
+              float: left;
+              display: inline-block;
+              margin-bottom:0px;
+              margin-left: -1px;
             }
-
         </style>
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-fixed-top" role="navigation"> <!-- {{{ -->
           <div class="container" style="width: 100%">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle"
@@ -67,18 +79,16 @@
                   <ul class="dropdown-menu" role="menu">
                     <li><a href="#">New Project</a></li>
                     <li><a href="#">New File</a></li>
+                    <li class="divider"></li>
                     <li><a href="#">Open Project</a></li>
                     <li><a href="#">Close Project</a></li>
+                    <li class="divider"></li>
                     <li><a href="#">Save Project</a></li>
                     <li><a href="#">Save All</a></li>
                     <li><a href="#">Save As</a></li>
-                    <li>
-                      <a class="" href="#" data-toggle="dropdown">Import<span class="caret"></span></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Project</a></li>
-                        <li><a href="#">Scene</a></li>
-                      </ul>
-                    </li>
+                    <li class="divider"></li>
+                    <li><a href="#">Import</a></li>
+                    <li><a href="#">Export</a></li>
                   </ul>
                 </li>
                 <li>
@@ -86,18 +96,6 @@
                 </li>
                 <li>
                   <a href="#">Window</a>
-                </li>
-                <li>
-                  <a href="#" class="" data-toggle="dropdown">Resolution<span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">480 * 320</a></li>
-                    <li><a href="#">320 * 480</a></li>
-                    <li><a href="#">960 * 640</a></li>
-                    <li><a href="#">640 * 960</a></li>
-                    <li><a href="#">1024 * 768</a></li>
-                    <li><a href="#">768 * 1024</a></li>
-                    <li><a href="#">Custom Size(*)</a></li>
-                  </ul>
                 </li>
                 <li>
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Help<span class="caret"></span></a>
@@ -117,21 +115,140 @@
                 </li>
                 <li class="navbar-form">
                   <button type="submit" class="btn btn-primary" data-toggle="modal"
-                    data-target="#signOutModal">Close</button>
+                    data-target="#signOutModal">
+                    <span class="glyphicon glyphicon-cog"></span>
+                  </button>
                 </li>
               </ul>
             </div> <!-- /.nav-collapse -->
           </div>
         </div>
+        <!-- }}} -->
 
+        <div class="btn-toolbar" role="toolbar" style="padding: 5px; padding-top: 64px;"> <!-- {{{ -->
+          <div class="btn-group">
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-asterisk"></span>
+            </a>
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-move"></span>
+            </a>
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-refresh"></span>
+            </a>
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-fullscreen"></span>
+            </a>
+          </div>
 
-        <canvas id="gameCanvas" width="720" height="480"></canvas>
+          <div class="btn-group" style="position: relative; left: 50%;margin-left: -240px;">
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-play"></span>
+            </a>
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-pause"></span>
+            </a>
+            <a class="btn btn-default" href="#">
+              <span class="glyphicon glyphicon-step-forward"></span>
+            </a>
+          </div>
 
-        <div style="margin: 0,auto;width: 720;text-align: center;margin-top: 20px;">
-          <button id="btnHeroIdle" class="btn btn-primary">Idle</button>
-          <button id="btnHeroRun"  class="btn btn-default">Run</button>
-          <button id="btnHeroHit"  class="btn btn-default">Hit</button>
-          <button id="btnHeroDead" class="btn btn-default">Dead</button>
+          <div class="btn-group pull-right">
+            <select id="selResolution" name="selResolution" class="selectpicker" data-style="btn-default" data-size="100%" data-container="body">
+              <option value="0">Default</option>
+              <option value="480:320">480 * 320</option>
+              <option value="320:480">320 * 480</option>
+              <option value="960:640">960 * 640</option>
+              <option value="640:960">640 * 960</option>
+              <option value="1024:768">1024 * 768</option>
+              <option value="768:1024">768 * 1024</option>
+              <option value="?">Custom Size(*)</option>
+            </select>
+          </div>
+
+          <!-- <div class="btn-group pull-right"> -->
+            <!-- <form class="input-group" action="#"> -->
+              <!-- <input id="id_search" class="form-control" type="text" name="search" maxlength="200"> -->
+              <!-- <span class="input-group-btn"> -->
+                <!-- <button class="btn btn-default btn-group" type="submit" name="submit_search" value="search">Search</button> -->
+              <!-- </span> -->
+            <!-- </form> -->
+          <!-- </div> -->
+        </div> <!-- }}} -->
+
+        <div class="row" style="padding: 0 5px;">
+          <div id="hierarchyView" class="col-sm-3 col-md-3 col-lg-2"> <!-- {{{ -->
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Hierarchy</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+
+            <div class="panel panel-success">
+              <div class="panel-heading">
+                <h3 class="panel-title">Project</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+
+            <div class="panel panel-warning">
+              <div class="panel-heading">
+                <h3 class="panel-title">Animation</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+
+            <div class="panel panel-danger">
+              <div class="panel-heading">
+                <h3 class="panel-title">Profiler</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+          </div> <!-- }}} -->
+
+          <div id="editorView" class="col-sm-5 col-md-5 col-lg-7">
+            <div class="panel panel-default">
+              <div class="panel-heading" style="padding: 2px 2px 0 2px;">
+                <!-- <h3 class="panel-title">Editor</h3> -->
+            <ul class="nav nav-tabs" role="tablist" style="margin: 0;">
+              <li class="active" role="presentation"><a href="#">Scene</a></li>
+              <li role="presentation"><a href="#">Game</a></li>
+            </ul>
+              </div>
+              <div class="panel-body" style="overflow: scroll;background-color: #000;padding: 0;">
+                <canvas id="gameCanvas" width="720" height="480"></canvas>
+              </div>
+            </div>
+
+            <div style="margin: 20px auto; text-align: center;">
+              <div id="btnGroupCtrl" class="btn-group">
+                <button id="btnHeroIdle" class="btn btn-default">Idle</button>
+                <button id="btnHeroRun"  class="btn btn-default">Run</button>
+                <button id="btnHeroHit"  class="btn btn-default">Hit</button>
+                <button id="btnHeroDead" class="btn btn-default">Dead</button>
+              </div>
+            </div>
+
+          </div>
+          <div id="propertiesView" class="col-sm-4 col-md-4 col-lg-3">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h3 class="panel-title">Inspector</h3>
+              </div>
+              <div class="panel-body">
+                Panel content
+              </div>
+            </div>
+          </div>
         </div>
 
         <!--页尾-->
@@ -139,6 +256,7 @@
         <!-- <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script> -->
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js" charset="UTF-8"><\/script>')</script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/bootstrap-select.min.js" charset="UTF-8"></script>
         <script>window.cc || document.write('<script src="js/vendor/cocos2d-js-v3.1-lite.js" charset="UTF-8"><\/script>')</script>
         <script src="js/plugins.js" charset="UTF-8"></script>
         <script src="js/plexus.js" charset="UTF-8"></script>
@@ -162,18 +280,21 @@
               }
           }());
 
-          (function() {
+          $(document.body).ready(function() {
               var testObject = new plexus.GameObject();
-              testObject.addComponent(new plexus.components.Input());
-              testObject.addComponent(new plexus.components.Physics());
-              testObject.addComponent(new plexus.components.Animator());
+              $(this).bind("GameLoaded", function(event, data) {
+                  testObject.addComponent(new plexus.components.Input());
+                  testObject.addComponent(new plexus.components.Physics());
+                  testObject.addComponent(new plexus.components.Animator());
+                  testObject.setUserData(data.object);
 
-              plexus.GameSystem.getInstance().addObject(testObject);
-              console.log(testObject.getId());
+                  plexus.GameSystem.getInstance().addObject(testObject);
+
+                  console.log(testObject.getId());
+              });
 
               $('#btnHeroIdle').click(function() {
                   // noop
-                  console.log("Idle");
                   var comp = testObject.getComponent('animator');
                   comp && comp.setState('idle');
               });
@@ -181,26 +302,33 @@
               $('#btnHeroRun').click(function() {
                   // noop
                   var gs = plexus.GameSystem.getInstance();
-                  console.log("Run");
                   var comp = testObject.getComponent('animator');
                   comp && comp.setState('run');
               });
 
               $("#btnHeroHit").click(function() {
                   // noop
-                  console.log("Hit");
                   var comp = testObject.getComponent('animator');
                   comp && comp.setState('hit');
               });
 
               $("#btnHeroDead").click(function() {
                   // noop
-                  console.log("Dead");
                   var comp = testObject.getComponent('animator');
                   comp && comp.setState('dead');
               });
 
+          });
+
+          (function() {
+              // $(window).resize(function() {
+              //     console.log($(window).height());
+              //   $(document.body).height($(window).height());
+              // });
+              $('#selResolution').selectpicker();
           }())
         </script>
     </body>
 </html>
+<!-- vi:ts=2 sw=2 et foldmethod=marker
+-->
